[gd_scene load_steps=2 format=3 uid="uid://b6bi5ewvqgxro"]

[ext_resource type="Script" path="res://scripts/MainMenuManager.gd" id="1_main_menu_manager"]

[node name="MainMenu" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HeaderContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="TitleLabel" type="Label" parent="CanvasLayer/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "PINBALL"
horizontal_alignment = 1

[node name="CurrencyDisplay" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/HeaderContainer"]
layout_mode = 2

[node name="CoinLabel" type="Label" parent="CanvasLayer/VBoxContainer/HeaderContainer/CurrencyDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Coins: 0"

[node name="GemLabel" type="Label" parent="CanvasLayer/VBoxContainer/HeaderContainer/CurrencyDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.4, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Gems: 0"

[node name="ButtonContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="PlayV1Button" type="Button" parent="CanvasLayer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play (v1.x)"

[node name="PlayV2Button" type="Button" parent="CanvasLayer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play (v2.0)"

[node name="PlayV3Button" type="Button" parent="CanvasLayer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Play (v3.0)"

[node name="ShopButton" type="Button" parent="CanvasLayer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Shop"

[node name="SettingsButton" type="Button" parent="CanvasLayer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="MainMenuManager" type="Node" parent="."]
script = ExtResource("1_main_menu_manager")
